add method signatures
