# uftos-openapi-specs.json
@@ -396,6 +396,15 @@
       },
       "put" : {
         "operationId" : "setUcdlFile",
+        "parameters" : [ {
+          "in" : "query",
+          "name" : "force",
+          "required" : false,
+          "schema" : {
+            "type" : "boolean",
+            "default" : false
+          }
+        } ],
         "requestBody" : {
           "content" : {
             "application/json" : {
@@ -1878,6 +1887,17 @@
     "/timeslots" : {
       "get" : {
         "operationId" : "getTimeslots",
+        "parameters" : [ {
+          "in" : "query",
+          "name" : "tags",
+          "required" : false,
+          "schema" : {
+            "type" : "array",
+            "items" : {
+              "type" : "string"
+            }
+          }
+        } ],
         "responses" : {
           "200" : {
             "content" : {
